--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         // v3
         $(function() {
-            $('div').css('background-color', 'pink');
+            $('div').css('background-color', 'green');
         });
     </script>
 
